--- a/public/css/app.css
+++ b/public/css/app.css
@@ -429,3 +429,22 @@ html{
   font-weight: normal;
   font-style: normal;
 }
+
+#button-yes {
+  width: 100px;
+  margin: 5px;
+  font-size: 16px;
+  border: none;
+  border-radius: 2px;
+  background-color: #66B266;
+  color: white;
+}
+#button-no {
+  width: 100px;
+  margin: 5px;
+  font-size: 16px;
+  border: none;
+  border-radius: 2px;
+  background-color: #ff3232;
+  color: white;
+}
